# Quantum_Safe_Federated_Learning

./: .gitattributes  .gitignore  Makefile  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.in  requirements.txt
configs/: default.yaml  federated.yaml  single_model.yaml  smoke.yaml
scripts/: run_eval.py  run_pipeline.py
src/qsfl/: __init__.py  cli.py
src/qsfl/attacks/: __init__.py  base.py  fine_tuning.py  gradient_leakage.py  membership_inference.py  model_extraction.py  poisoning.py  pruning.py  registry.py  runner.py  watermark_removal.py
src/qsfl/crypto/: __init__.py  aead.py  encryptor.py  kdf.py  kem.py  types.py
src/qsfl/data/: __init__.py  medmnist_data.py  partition.py  synthetic.py
src/qsfl/federated/: __init__.py  secure_agg.py  server.py  trainer.py
src/qsfl/ledger/: __init__.py  base.py  factory.py  hashchain.py  web3_backend.py
src/qsfl/ledger/contracts/: OwnershipRegistry.sol
src/qsfl/models/: __init__.py  backbones.py  registry.py
src/qsfl/pipeline/: __init__.py  runner.py
src/qsfl/quantum/: __init__.py  vqc.py
src/qsfl/utils/: __init__.py  config.py  logging.py  metrics.py  plotting.py  seeding.py  tensor_io.py
src/qsfl/verification/: __init__.py  verify.py
src/qsfl/watermark/: __init__.py  embedder.py  payload.py  uchida.py
tests/: conftest.py  test_attacks.py  test_crypto.py  test_kem_liboqs.py  test_ledger.py  test_metrics.py  test_pipeline_smoke.py  test_quantum.py  test_secure_agg.py  test_tensor_io.py  test_watermark.py
